k8s/namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: urlshortener
  labels:
    name: dev
