k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: urlshortener
  name: urlshortener
spec:
  replicas: 1
  selector:
    matchLabels:
      app: urlshortener
  template:
    metadata:
      labels:
        app: urlshortener
    spec:
      containers:
        - name: urlshortener
          image: cmg/urlshortener:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 9090
            - containerPort: 8080
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
