k8s/url-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: urlshortener
  name: url-deployment
  labels:
    app: url
spec:
  replicas: 1
  selector:
    matchLabels:
      app: url
  template:
    metadata:
      labels:
        app: url
    spec:
      containers:
        - name: url
          image: cmg/url-svc
          imagePullPolicy: Never
          ports:
            - containerPort: 9090
            - containerPort: 8080
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  namespace: urlshortener
  name: url-service
spec:
  type: NodePort
  selector:
    app: url
  ports:
    - name: grpc-port
      protocol: TCP
      port: 9090
      targetPort: 9090
      nodePort: 30000
    - name: http-port
      protocol: TCP
      port: 8080
      targetPort: 8080
      nodePort: 30001
