k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: urlshortener
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
    - host: short.url
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: urlshortener
                port:
                  number: 8080
